(lang dune 2.7)
(name tjr_util)

;; for opam
(authors              "Tom Ridge <tom.j.ridge@googlemail.com>")
(maintainers          "Tom Ridge <tom.j.ridge@googlemail.com>")
(source               (github tomjridge/FIXME))
(homepage             https://github.com/tomjridge/FIXME)
(documentation        https://tomjridge.github.io/FIXME/ocamldoc/index.html)
(generate_opam_files  true)


(package 
 (name mmap)
 (synopsis "")
 (depends bigstringaf)) 

(package 
 (name std_util)
 (synopsis "")
 (depends )) 


